fixed colour shift on tilt activation

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,7 +3,7 @@
     --radius: 14;
     --border: 3;
     --backup-border: var(--backdrop);
-    --size: 1000;
+    --size: 1500;
 }
 
 article:first-of-type {
@@ -49,7 +49,7 @@ body {
     background-color: var(--backdrop, transparent);
     background-size: calc(100% + (2 * var(--border-size))) calc(100% + (2 * var(--border-size)));
     background-position: 50% 50%;
-    background-attachment: fixed;
+    background-attachment: local;
     border: var(--border-size) solid var(--backup-border);
     position: relative;
     touch-action: none;
@@ -63,7 +63,7 @@ body {
     inset: calc(var(--border-size) * -1);
     border: var(--border-size) solid transparent;
     border-radius: calc(var(--radius) * 1px);
-    background-attachment: fixed;
+    background-attachment: local;
     background-size: calc(100% + (2 * var(--border-size))) calc(100% + (2 * var(--border-size)));
     background-repeat: no-repeat;
     background-position: 50% 50%;
